force-app/main/default/objects/RegisterYourProductList__c/RegisterYourProductList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Register Your Product List</description>
    <label>Register Your Product List</label>
</CustomObject>