force-app/main/default/objects/RegisterYourProductList__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Name</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>