force-app/main/default/objects/RegisterYourProductList__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Product Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>