force-app/main/default/objects/RegisterYourProductList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sort_Index__c</columns>
    <columns>NAME</columns>
    <columns>ProductName__c</columns>
    <columns>ProductType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>