force-app/main/default/objects/RegisterYourProductList__c/listViews/By_Sort_Index.listView-meta.xml
<ListView>
    <fullName>By_Sort_Index</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Sort_Index__c</columns>
    <columns>ProductName__c</columns>
    <columns>ProductType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>By Sort Index</label>
</ListView>